# elp-protocol

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
canisters/Elliptic_frontend/assets/: main.css  normalize.css
canisters/Elliptic_frontend/assets/documents/: paper.txt
canisters/Elliptic_frontend/src/: actions.jsx  app.jsx  elliptic_status.jsx  index.html
canisters/Elliptic_frontend/src/components/: chart_icp.jsx  footer.jsx  info_bar.jsx  login.tsx  navbar.jsx  social_network.jsx  statistics.jsx  status.jsx
canisters/Elliptic_frontend/src/components/actions/: leverage.tsx  liquidity.tsx  swap.tsx
canisters/Elliptic_frontend/src/utils/: auth.tsx  calls.ts  canister_ids.json  state.tsx
canisters/Elliptic_frontend/src/utils/interfaces/core/: core.ts  core_idl.ts
canisters/Elliptic_frontend/src/utils/interfaces/gauge/: gauge.ts  gauge_idl.js
canisters/Elliptic_frontend/src/utils/interfaces/icrc1/: icrc1.ts  icrc1_idl.ts
canisters/core-canister/: Cargo.toml  core.did
canisters/core-canister/sm-tests/: Cargo.toml
canisters/core-canister/sm-tests/src/: calls.rs  lib.rs  setup.rs  test_swap.rs
canisters/core-canister/sm-tests/src/calls/: core_canister.rs  ledger.rs  xrc_canister.rs
canisters/core-canister/src/: dashboard.rs  guard.rs  lib.rs  main.rs  management.rs  metrics.rs  state.rs  tasks.rs  timer.rs  updates.rs
canisters/core-canister/src/lifecycle/: init.rs  upgrade.rs
canisters/core-canister/src/state/: audit.rs  eventlog.rs
canisters/core-canister/src/updates/: leverage.rs  liquidity.rs  swap.rs
canisters/core-canister/tests/: tests.rs
canisters/gauge/: Cargo.toml  gauge.did  main.rs
canisters/icrc1/: ic-icrc1-ledger.wasm
canisters/xrc/: xrc.did
deployement/: local_deploy.sh  staging_deploy.sh
prometheus/: config.yaml
tests/: main.py
tests/actors/: core_actor.py  identity_actor.py  ledger_actor.py
