[package]
name = "core-canister"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core-canister"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
self_check = []

[dependencies]
candid = "0.8.4"
ic0 = "0.18.9"
ic-canisters-http-types = { path = "../../../ic/rs/rust_canisters/http_types" }
ic-canister-log = { path = "../../../ic/rs/rust_canisters/canister_log" }
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ic-ledger-types = "0.2.0"
icrc-ledger-types = { path = "../../../ic/packages/icrc-ledger-types" }
ic-crypto-sha = { path = "../../../ic/rs/crypto/sha" }
ic-base-types = { path = "../../../ic/rs/types/base_types" }
# ic-canisters-http-types = { path = "../../../ic/rs/rust_canisters/http_types" }
ic-icrc1-client-cdk = { path = "../../../ic/rs/rosetta-api/icrc1/client/cdk" }
ic-icrc1 = { path = "../../../ic/rs/rosetta-api/icrc1" }
ic-metrics-encoder = "1"
ic-stable-structures = "0.5.2"
ic-xrc-types = "1.0.0"
ciborium = "0.2"
scopeguard = "1.1.0"
serde = "1.0.152"
hex = "0.4.3"

[dev-dependencies]
core-sm-tests = { path = "sm-tests" }
