[package]
name = "core-sm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_matches = "1.3.0"
candid = "0.8.1"
core-canister = { path = "../" }
ic-base-types = { path = "../../../../ic/rs/types/base_types" }
ic-canisters-http-types = { path = "../../../../ic/rs/rust_canisters/http_types" }
ic-ic00-types = { path = "../../../../ic/rs/types/ic00_types" }
icrc-ledger-types = { path = "../../../../ic/packages/icrc-ledger-types" }
ic-ledger-canister-core = { path = ".././../../../ic/rs/rosetta-api/ledger_canister_core" }
ic-ledger-core = { path = ".././../../../ic/rs/rosetta-api/ledger_core" }
ic-state-machine-tests = { path = "../../../../ic/rs/state_machine_tests" }
ic-xrc-types = "1.0.0"
xrc-mock = { path = "../../../../ic/rs/rosetta-api/tvl/xrc_mock" }
num-traits = "0.2.14"
proptest = "1.0"
cddl = "0.9.0-beta.1"
hex = "0.4.2"

